PROJECT(HELLOWORLD)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)
SET(HELLOWORLD_VERSION_MAJOR 1)
SET(HELLOWORLD_VERSION_MINOR 0)
CONFIGURE_FILE(
        "${PROJECT_SOURCE_DIR}/HELLOWORLDCONFIG.h.in"
        "${PROJECT_BINARY_DIR}/HELLOWORLDCONFIG.h"
)
#ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(MathFunctions)
INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}
        ${PROJECT_BINARY_DIR}
)
ADD_EXECUTABLE(HELLOWORLDCONFIG main.cpp)